--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-color:#fff;
+    --primary-color:#c72727;
     --secondary-color:#f99500;
     --light-color:#f3f3f3;
     --dark-color:#333;
