--- a/css/mobile.css
+++ b/css/mobile.css
@@ -37,4 +37,23 @@
     #main-footer .footer-container >*:last-child{
         grid-column: 1;
     }
+
+    #main-footer .footer-container >*:first-child,
+    #main-footer .footer-container >*:nth-child(2) >*{
+        border-bottom: #444 dotted 1px;
+        padding-bottom: 1rem;
+    }
+
+    .page-container{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .page-container>*:first-child{
+        grid-row: 1;
+    }
+
+    .l-heading{
+        font-size: 2;
+    }
 }
